# InfrasCal

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: BinaryUtilities.cmake  BuildConfig.cmake  DependencyUtilities.cmake  INFRASCALConfig.cmake.in  InstallUtilities.cmake  LibraryConfig.cmake
data/demo/: cam0_data.txt
data/demo/map/: cameras.txt  images.txt  points3D.txt  project.ini
include/infrascal/: EigenUtils.h
include/infrascal/camera_models/: Camera.h  CameraFactory.h  CataCamera.h  EquidistantCamera.h  PinholeCamera.h  ScaramuzzaCamera.h
src/: CMakeLists.txt
src/SiftGPU/: CMakeLists.txt  ProgramCU.cu  PyramidCU.cpp
src/camera_models/: CMakeLists.txt  Camera.cc  CameraFactory.cc  CataCamera.cc  CataCamera_test.cc  CostFunctionFactory.cc  CostFunctionFactory.h  EquidistantCamera.cc  EquidistantCamera_test.cc  PinholeCamera.cc  PinholeCamera_test.cc  ScaramuzzaCamera.cc
src/camera_systems/: CMakeLists.txt  CameraSystem.cc
src/dbow2/: CMakeLists.txt
src/dbow2/DBoW2/: CMakeLists.txt  DBoW2.h  FSift128.cpp  FSift128.h  TemplatedVocabulary.h
src/dbow2/DUtils/: CMakeLists.txt
src/dbow2/DUtilsCV/: CMakeLists.txt
src/dbow2/DVision/: CMakeLists.txt
src/examples/: CMakeLists.txt  infrastr_calib.cc
src/features2d/: CMakeLists.txt  SurfGPU.cc  SurfGPU.h
src/gpl/: CMakeLists.txt  CubicSpline.cc  CubicSpline.h  EigenQuaternionParameterization.cc  EigenQuaternionParameterization.h  gpl.cc  gpl.h
src/infrastr_calib/: CMakeLists.txt  InfrastructureCalibration.cc
src/location_recognition/: CMakeLists.txt  LocationRecognition.cc  LocationRecognition.h
src/pose_estimation/: CMakeLists.txt  P3P.cc  P3P.h
src/pugixml/: CMakeLists.txt
src/radialpose/: CMakeLists.txt  LICENSE  README.md  radialpose.h  radialpose_test.cc  ransac_test.cc
src/radialpose/matlab/: compile_mex.m  radialpose_mex.cpp  ransac_radialpose_mex.cc
src/radialpose/misc/: camera.h  distortion.cc  distortion.h  ransac_estimator.h  refinement.cc  refinement.h  unit_test_misc.h  univariate.cc  univariate.h
src/radialpose/solvers/: bujnak_accv10.cc  bujnak_accv10.h  kukelova_iccv13.cc  kukelova_iccv13.h  larsson_iccv17.cc  larsson_iccv17.h  larsson_iccv19.cc  larsson_iccv19.h  larsson_iccv19_impl.cc  oskarsson_arxiv18.cc  oskarsson_arxiv18.h  pose_estimator.h
src/sparse_graph/: CMakeLists.txt  Odometry.cc  Pose.cc  SparseGraph.cc  SparseGraphUtils.cc  Transform.cc
(+7 files in other folders)
